# ledgerbackendd

./: .dockerignore  .env.example  .gitignore  Dockerfile  FRONTEND_OVERVIEW.md  IMPLEMENTATION_PROGRESS.md  alembic.ini  backend_logs.txt  check_db_direct.py  docker-compose.yml  list_users.py  pyproject.toml  requirements.txt  scratch_dump.py  test_production_module.py  test_staff_module.py  test_transactions_api.py
.claude/: API_CONVENTIONS.md  ARCHITECTURE.md  BACKGROUND_TASKS.md  DATABASE_SCHEMA.md  FOLDER_STRUCTURE.md  HIGH_LEVEL_ARCHITECTURE.md  OVERVIEW.md  SECURITY.md  improvements.md
.claude/modules/: 01_AUTH.md  02_SUPPLIERS.md  03_CUSTOMERS.md  04_INVENTORY.md  05_PURCHASES.md  06_SALES.md  07_STAFF.md  08_TRANSACTIONS.md  09_PRODUCTION.md  10_REPORTS.md
.scripts/: Downloads - Shortcut.lnk  debug_ledger.py  promote_user.py  registration.json  sql_log.txt  test_api.py  test_bug.py  test_inventory_api.py  test_purchases_api.py  test_sales_api.py  validate_customers.py  validate_suppliers.py
alembic/: env.py
alembic/versions/: 1a279cb17dd6_initial_migration.py  365e3162d704_rename_production_labor_category_to_item.py  (+23 more)
app/: main.py
scratch/: _dash_diag.py  check_due_dates.py  check_reports.py  find_admin_password.py  fix_historical_order.py  get_token.py  inspect_dashboard_issue.py  inspect_data.py  inspect_db_full.py  inspect_production.py  reset_password.py  run_reports_direct.py  test_dashboard_endpoint.py  test_hardened_endpoints.py  test_self_endpoints.py  update_admin_password.py
scripts/: create_admin.py
tests/: conftest.py
(+96 files in other folders)
